chore: Add assetPrefix on Configs to static assets

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ NEXT_PUBLIC_DJ_PRESSKIT_API_URL=http://localhost:3010
 
 # Optional: Preview secret for bypassing host resolution (if needed in future)
 # PREVIEW_SECRET=your-preview-secret
+
+# ✅ FIX: Forzar que todos los assets (/_next/*) se sirvan desde la cápsula
+# Esto evita “white screen” cuando el HTML se entrega vía router con dominio limpio.
+NEXT_PUBLIC_ASSET_PREFIX=http://localhost:3000/
