--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@tailwindcss/postcss": "^4.1.18",
     "@types/three": "^0.182.0",
     "autoprefixer": "^10.4.23",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "critters": "^0.0.23",
     "framer-motion": "^12.24.0",
     "gsap": "^3.14.2",
     "hls.js": "^1.6.15",
@@ -24,9 +26,12 @@
     "postprocessing": "^6.38.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-inlinesvg": "^4.2.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.182.0",
+    "tw-animate-css": "^1.4.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
