--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gsap": "^3.14.2",
     "hls.js": "^1.6.15",
     "lucide-react": "^0.562.0",
+    "mathjs": "^15.1.0",
     "next": "16.1.1",
     "postcss": "^8.5.6",
     "postprocessing": "^6.38.2",
